# bearpi-project

./: README.md  kernel - 快捷方式.lnk
applications/BearPi/BearPi-HM_Micro/docs/: README.md
applications/BearPi/BearPi-HM_Micro/docs/device-dev/: BearPi-HM_Micro十分钟上手.md  E53扩展板功能使用指导.md  Linux下配置小熊派设备开发的开发环境.md  Nano编译环境升级至Micro编译环境.md  人体感应E53_IS1扩展板功能使用指导.md  如何从0搭建开发环境.md  如何在开发板上安装HAP应用.md  如何烧录固件并启动.md  如何编译系统.md  开发板Wi-Fi功能使用指导.md  开发环境搭建.md  智慧井盖E53_SC2扩展板功能使用指导.md  智慧农业E53_IA1扩展板功能使用指导.md  智慧烟感E53_SF1扩展板功能使用指导.md  智慧路灯E53_SC1扩展板功能使用指导.md  编写一个hello_world程序.md  编写一个点亮LED灯程序.md  通过JS应用控制LED灯.md
applications/BearPi/BearPi-HM_Micro/samples/led_app/: BUILD.gn  my_led.c
applications/BearPi/BearPi-HM_Micro/samples/my_app/: BUILD.gn  hello.c
applications/BearPi/BearPi-HM_Micro/tools/download_img/bootloader/: u-boot.stm32
device/st/bearpi_hm_micro/liteos_a/board/: target_config.h
device/st/bearpi_hm_micro/liteos_a/drivers/: BUILD.gn
device/st/bearpi_hm_micro/liteos_a/hdf_config/: hdf.hcs
device/st/drivers/: BUILD.gn
device/st/drivers/e53_driver/E53_SC2/: E53_SC2_hdf.c
device/st/drivers/e53_ia1/: BUILD.gn  e53_ia1.c  e53_ia1.h
device/st/drivers/gpio/: stm32mp1_gpio.c  stm32mp1_gpio.h
device/st/drivers/i2c/: stm32mp1_i2c.c
device/st/drivers/led/: BUILD.gn  led.c
device/st/drivers/pwm/: stm32mp1_pwm.c  stm32mp1_pwm.h
device/st/drivers/stm32mp1xx_hal/: BUILD.gn
device/st/drivers/wifi/driver/hi3881/: BUILD.gn  (+1 more)
foundation/ace/ace_engine_lite/frameworks/: BUILD.gn
foundation/ace/ace_engine_lite/test/: ace_test_config.gni
kernel/liteos_a/: BUILD.gn
(+25 files in other folders)
